// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрендерить офферы в сгруппированном виде для типа вывода "Модель" 1`] = `
<div
  className="ListingCars ListingCars_outputType_models_list"
>
  <div
    className="ListingCars__loaderOverlay"
  />
  <ListingItemGroup
    cardFrom="SERP"
    contextBlock="BLOCK_LISTING"
    contextPage="PAGE_LISTING"
    currency="RUR"
    forceRenderImage={true}
    hasLinkToAuctionLeader={false}
    index={0}
    key="cars-0"
    listingRequestId="abc123"
    offer={
      Object {
        "groupping_info": Object {
          "grouping_id": "configuration_id=777",
          "groupping_params": Object {
            "configuration_id": 777,
          },
        },
        "id": 1,
      }
    }
    onClick={[Function]}
    page={1}
    params={Object {}}
    searchParams={Object {}}
  />
  <Connect(CreditApplicationFormModal) />
  <CreditWizardCurtain />
</div>
`;

exports[`должен отрендерить офферы в списочном виде в для типа вывода "Модель" и любой категории, крома легковых 1`] = `
<div
  className="ListingCars ListingCars_outputType_models_list"
>
  <div
    className="ListingCars__loaderOverlay"
  />
  <Connect(SaveListingContext)
    key="cars-1"
  >
    <ListingItem
      cardFrom="SERP"
      contextBlock="BLOCK_LISTING"
      contextPage="PAGE_LISTING"
      currency="RUR"
      forceRenderImage={true}
      hasActions={true}
      hidden={false}
      index={0}
      isVisited={false}
      key="cars-1"
      listingRequestId="abc123"
      offer={
        Object {
          "groupping_info": Object {
            "grouping_id": "configuration_id=777",
            "groupping_params": Object {
              "configuration_id": 777,
            },
          },
          "id": 1,
        }
      }
      page={1}
      params={Object {}}
      searchParams={Object {}}
      sellerPopupOpen={[Function]}
      sendMarketingEventByListingOffer={[Function]}
      snippetRef={null}
    />
  </Connect(SaveListingContext)>
  <Connect(CreditApplicationFormModal) />
  <CreditWizardCurtain />
</div>
`;

exports[`должен отрендерить офферы в списочном виде для типа вывода "Список" 1`] = `
<div
  className="ListingCars ListingCars_outputType_list"
>
  <div
    className="ListingCars__loaderOverlay"
  />
  <Connect(SaveListingContext)
    key="cars-0"
  >
    <ListingItem
      cardFrom="SERP"
      contextBlock="BLOCK_LISTING"
      contextPage="PAGE_LISTING"
      currency="RUR"
      forceRenderImage={true}
      hasActions={true}
      hidden={false}
      index={0}
      isVisited={false}
      key="cars-0"
      listingRequestId="abc123"
      offer={
        Object {
          "id": 0,
        }
      }
      page={1}
      params={Object {}}
      searchParams={Object {}}
      sellerPopupOpen={[Function]}
      sendMarketingEventByListingOffer={[Function]}
      snippetRef={null}
    />
  </Connect(SaveListingContext)>
  <Connect(CreditApplicationFormModal) />
  <CreditWizardCurtain />
</div>
`;

exports[`должен отрендерить офферы в списочном или сгруппированном виде в зависимости от наличия групповой информации в них для типа вывода "Модель" 1`] = `
<div
  className="ListingCars ListingCars_outputType_models_list"
>
  <div
    className="ListingCars__loaderOverlay"
  />
  <Connect(SaveListingContext)
    key="cars-0"
  >
    <ListingItem
      cardFrom="SERP"
      contextBlock="BLOCK_LISTING"
      contextPage="PAGE_LISTING"
      currency="RUR"
      forceRenderImage={true}
      hasActions={true}
      hidden={false}
      index={0}
      isVisited={false}
      key="cars-0"
      listingRequestId="abc123"
      offer={
        Object {
          "id": 0,
        }
      }
      page={1}
      params={Object {}}
      searchParams={Object {}}
      sellerPopupOpen={[Function]}
      sendMarketingEventByListingOffer={[Function]}
      snippetRef={null}
    />
  </Connect(SaveListingContext)>
  <ListingItemGroup
    cardFrom="SERP"
    contextBlock="BLOCK_LISTING"
    contextPage="PAGE_LISTING"
    currency="RUR"
    forceRenderImage={true}
    hasLinkToAuctionLeader={false}
    index={1}
    key="cars-1"
    listingRequestId="abc123"
    offer={
      Object {
        "groupping_info": Object {
          "grouping_id": "configuration_id=777",
          "groupping_params": Object {
            "configuration_id": 777,
          },
        },
        "id": 1,
      }
    }
    onClick={[Function]}
    page={1}
    params={Object {}}
    searchParams={Object {}}
  />
  <Connect(CreditApplicationFormModal) />
  <CreditWizardCurtain />
</div>
`;

exports[`должен отрендерить офферы в табличном виде для табличного типа вывода 1`] = `
<div
  className="ListingCars ListingCars_outputType_table"
>
  <div
    className="ListingCars__loaderOverlay"
  />
  <Connect(SaveListingContext)
    key="cars-0"
  >
    <ListingItemSequential
      cardFrom="SERP"
      contextBlock="BLOCK_LISTING"
      contextPage="PAGE_LISTING"
      currency="RUR"
      index={0}
      key="cars-0"
      listingRequestId="abc123"
      offer={
        Object {
          "id": 0,
        }
      }
      page={1}
      params={Object {}}
    />
  </Connect(SaveListingContext)>
  <Connect(CreditApplicationFormModal) />
  <CreditWizardCurtain />
</div>
`;
